--- a/coderef/_fonts.css
+++ b/coderef/_fonts.css
@@ -7,17 +7,30 @@ font-weight: 400;
 font-style: normal;
 
 
-Feltro Outline
+Proxima Nova Regular
 
-font-family: feltro-outline, sans-serif;
+font-family: proxima-nova, sans-serif;
 font-weight: 400;
 font-style: normal;
 
 
-Feltro Shadow
-
-font-family: feltro-shadow, sans-serif;
+Proxima Nova Italic
+font-family: proxima-nova, sans-serif;
 font-weight: 400;
+font-style: italic;
+
+
+Proxima Nova Semibold
+
+font-family: proxima-nova, sans-serif;
+font-weight: 600;
 font-style: normal;
+
+
+Proxima Nova Semibold Italic
+
+font-family: proxima-nova, sans-serif;
+font-weight: 600;
+font-style: italic;
 
 */
