--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 /*Navigation*/
 .bg-nav{
-    background-color: #1f2439;
+    background-color: transparent;
 }
 .navbar-brand{
     font-family: rig-solid-bold-fill,sans-serif;
