--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+@import url(https://use.typekit.net/del7grk.css);
 /*Navigation*/
 .bg-nav{
     background-color: transparent;
@@ -38,7 +38,7 @@
 .navbar-toggle{
     border-width: 0;
     color: #fff;
-    font-size: 2.5em;
+    font-size: 1.5em;
     background: none;
     padding-right: 0;
 }
@@ -91,14 +91,41 @@
     }
 }
 
-/* Content */
+/*Wordmark SVG*/
+.cls-1, .cls-2 {
+    font-size: 226.458px;
+    fill: #fff;
+    text-anchor: middle;
+}
+.cls-1 {
+    font-family: Feltro;
+}
+.cls-2 {
+    font-family: "Proxima Nova";
+}
 
+/* Content */
+body{
+    background-color: #fff;
+    max-width: 100vw;
+    max-width: 100%;
+}
     /*Home Main*/
 .home-header{
-    min-height: 75vh;
+    min-height: 85vh;
+    max-width: 100vw;
     background: rgb(31,36,57);
-    background: linear-gradient(180deg, rgba(31,36,57,1) 0%, rgba(38,51,63,1) 24%, rgba(47,71,72,1) 37%, rgba(52,83,77,1) 42%, rgba(61,104,86,1) 52%, rgba(126,253,149,1) 100%);
-    border-radius: 0 0 400%/750px 600px;
+    background: linear-gradient(180deg, rgba(31,36,57,1) 20%, rgba(0, 123, 255,.6) 120%), url('../asset/image/homebackground.webp');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    clip-path: ellipse(85% 100% at 50% 0%);
+}
+@media (max-width: 567px){
+    .home-header{
+        clip-path: ellipse(150% 100% at 50% 0%);
+        max-width: 100%;
+    }
 }
 .header-content{
     display: flex;
@@ -109,8 +136,20 @@
     color: #fff;
     font-family: proxima-nova, sans-serif;
     font-weight: 600;
-    font-style: normal; 
+    font-style: normal;
+    font-size: 1.75em; 
+    padding-bottom: 0.5em !important;
 }
 .header-image{
     width: 350px !important;
+}
+@media (max-width: 567px){
+    .header-image{
+        max-width: 300px;
+    }
+}
+@media (max-width: 350px){
+    .header-image{
+        max-width: 200px;
+    }
 }
