--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@
     background: #000;
     overflow-x: hidden;
     transition: 0.5s;
+    text-transform: uppercase;
 }
 .overlay-content {
     font-weight: 600;
@@ -61,6 +62,7 @@
     width: 100%;
     margin-top: 30px;
     padding-bottom: 30px;
+    text-transform: uppercase;
 }
 .overlay a {
     padding: 8px;
@@ -69,15 +71,18 @@
     color: #fff;
     display: block;
     transition: 0.3s;
+    text-transform: uppercase;
 }
 .overlay a:hover, .overlay a:focus {
     color: #f1f1f1;
+    text-transform: uppercase;
 }
 .overlay .closebtn {
     position: absolute;
     top: 20px;
     right: 15px;
     font-size: 45px;
+    text-transform: uppercase;
 }
 .closebtn:active{
     text-decoration: none;
@@ -88,6 +93,7 @@
     font-size: 40px;
     top: 15px;
     right: 35px;
+    text-transform: uppercase;
     }
 }
 
