--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,16 @@ body{
 .main-content{
     margin-top: 10vh;
 }
+.card{
+    border: none;
+}
+.card-title{
+    font-family: proxima-nova, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+.card-text{
+    font-family: proxima-nova, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
