blur backdrop filter

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 /*Navigation*/
 .bg-nav{
     background-color: transparent;
+    -webkit-backdrop-filter: blur(40px) !important;
+    backdrop-filter: blur(40px) !important;
 }
 .navbar-brand{
     font-family: rig-solid-bold-fill,sans-serif;
@@ -34,6 +36,10 @@
 }
 .navbar{
     padding: 1.25rem 1rem !important;
+}
+.sticky-blur{
+    -webkit-backdrop-filter: blur(150px) !important;
+    backdrop-filter: blur(150px) !important;
 }
 .navbar-toggle{
     border-width: 0;
@@ -164,4 +170,5 @@ body{
     font-family: proxima-nova, sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 1.3em;
 }
