--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url(https://use.typekit.net/del7grk.css);
 /*Navigation*/
 .bg-nav{
-    background-color: transparent;
+    background-color: rgba(33, 58, 162, 0.8);
     -webkit-backdrop-filter: blur(20px) !important;
     backdrop-filter: blur(20px) !important;
 }
@@ -114,7 +114,7 @@ body{
     min-height: 90vh;
     max-width: 100vw;
     background: rgb(31,36,57);
-    background: linear-gradient(180deg, rgba(31,36,57,1) 25%, rgba(0, 123, 255,.6) 120%), url('../asset/image/homebackground.webp');
+    background: linear-gradient(180deg, rgba(33, 58, 162, 1) 25%, rgba(31 ,36 ,57 ,.6) 120%), url('../asset/image/homebackground.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -177,4 +177,6 @@ body{
 .card-image{
     max-width: 100%;
     border-radius: 20px;
+    aspect-ratio: 3 / 2;
+    object-fit: cover;
 }
