--- a/css/style.css
+++ b/css/style.css
@@ -179,4 +179,5 @@ body{
     border-radius: 20px;
     aspect-ratio: 3 / 2;
     object-fit: cover;
+    filter: linear-gradient(180deg, rgba(33, 58, 162, 1) 25%, rgba(31 ,36 ,57 ,.6) 120%);
 }
