--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url(https://use.typekit.net/del7grk.css);
 /*Navigation*/
 .bg-nav{
     background-color: rgba(33, 58, 162, 0.8);
@@ -6,9 +5,6 @@
     backdrop-filter: blur(20px);
 }
 .navbar-brand{
-    font-family: rig-solid-bold-fill,sans-serif;
-    font-weight: 700;
-    font-style: normal;
     font-size: 2.8rem;
     padding-top: 0;
 }
@@ -20,17 +16,11 @@
     padding: 0.3em auto !important;
 }
 .nav-link{
-    font-family: proxima-nova,sans-serif;
-    font-weight: 400;
-    font-style: normal;
     color: #c5c5c5;
     text-transform: uppercase;
     margin: 0em 0.5em;
 }
 .nav-link:hover{
-    font-family: proxima-nova,sans-serif;
-    font-weight: 400;
-    font-style: normal;
     color: #fff;
     text-transform: uppercase;
 }
@@ -90,12 +80,14 @@
     text-decoration: none;
 }
 @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
+    .overlay a {
+        font-size: 20px
+    }
     .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-    text-transform: uppercase;
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+        text-transform: uppercase;
     }
 }
 
@@ -131,9 +123,6 @@ body{
 }
 .header-text{
     color: #fff;
-    font-family: proxima-nova, sans-serif;
-    font-weight: 600;
-    font-style: normal;
     font-size: 1.75em; 
     padding-top: 0.5em !important;
 }
@@ -159,15 +148,7 @@ body{
     border: none;
     border-radius: 20px;
 }
-.card-title{
-    font-family: proxima-nova, sans-serif;
-    font-weight: 600;
-    font-style: normal;
-}
 .card-text{
-    font-family: proxima-nova, sans-serif;
-    font-weight: 400;
-    font-style: normal;
     font-size: 1.3em;
 }
 .card-image{
@@ -205,9 +186,6 @@ footer{
 footer h5{
     margin-bottom: 10px;
     text-transform: uppercase;
-    font-family: proxima-nova, sans-serif;
-    font-weight: 500;
-    font-style: normal;
 }
 footer{
     height: 100%;
